--- a/FKitShop/src/index.css
+++ b/FKitShop/src/index.css
@@ -1,6 +1,6 @@
 :root {
   --background-color: #F2F2F2;
-  --primary-color: #1E1E1E;
+  --primary-color: #1E201E;
   --secondary-color: #B43F3F;
   --third-color: #B19615;
 }
