--- a/FKitShop/src/assets/components/Header/Header.css
+++ b/FKitShop/src/assets/components/Header/Header.css
@@ -1,11 +1,98 @@
-a{
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+a {
     text-decoration: none;
 }
   
-ul{
+ul {
     list-style: none;
 }
 
-nav{
+nav {
     background-color: var(--primary-color);
+    width: 100%;
+    height: 110px;
+}
+
+.upper-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5px;
+}
+
+.nav-logo {
+    padding-top: 10px;
+    width: 150px;
+}
+
+.search-form {
+    display: flex;
+    align-items: center;
+    background-color: white;
+    border-radius: 5px;
+    overflow: hidden;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 50px;
+}
+
+.search-form input {
+    flex-grow: 1;
+    border: none;
+    padding: 10px 15px;
+    font-size: 16px;
+    outline: none;
+}
+
+.search-form button {
+    background: none;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+.search-form button:hover {
+    background-color: #f0f0f0;
+}
+
+.user-actions {
+    display: flex;
+    align-items: center;
+}
+
+.user-actions .nav-item {
+    display: flex;
+    align-items: center;
+    color: #ffffff;
+    text-decoration: none;
+    margin-left: 20px;
+    font-size: 14px;
+}
+
+.user-actions .nav-item box-icon {
+    margin-right: 5px;
+}
+
+.user-actions .nav-item span {
+    vertical-align: middle;
+}
+
+.nav-menu {
+    display: flex;
+    justify-content: center;
+    background-color: var(--primary-color);
+}
+
+.nav-menu li {
+    margin: 0 15px;
+}
+
+.nav-menu a {
+    color: #ffffff;
+    font-size: 16px;
 }
