--- a/FKitShop/src/assets/components/Header/Header.css
+++ b/FKitShop/src/assets/components/Header/Header.css
@@ -96,3 +96,8 @@ nav {
     color: #ffffff;
     font-size: 16px;
 }
+
+.nav-menu a:hover {
+    text-decoration: underline;
+    color: #f0f0f0;
+}
