--- a/FKitShop/src/assets/component/Footer/Footer.css
+++ b/FKitShop/src/assets/component/Footer/Footer.css
@@ -4,10 +4,14 @@ footer{
 }
 
 .footer-logo {
-    max-width: 200px;
+    max-width: 250px;
     height: auto;
 }
 
 .social-icons a {
     font-size: 1.5rem;
+}
+
+.social-icons a:hover {
+    color: var(--third-color);
 }
