--- a/FKitShop/src/assets/component/Header/Header.css
+++ b/FKitShop/src/assets/component/Header/Header.css
@@ -50,11 +50,13 @@ nav {
 }
 
 .upper-nav-search-form button {
+    height: 44px;
     background: none;
     border: none;
     padding: 10px 15px;
-    cursor: pointer;
+    
 }
+
 
 .upper-nav-search-form button:hover {
     background-color: #f0f0f0;
@@ -97,21 +99,24 @@ nav {
     color: #ffffff;
     font-size: 16px;
     padding: 0 5px;
+    font-weight: 600;
 }
 
 .lower-nav-menu li:hover {
-    background-color: #f0f0f0;
+    background-color: grey;
     border-radius: 5px;
 }
 
 .lower-nav-menu li:hover a{
     color: var(--primary-color);
     text-decoration: none;
+    font-weight: 600;
 }
 
 .nav-menu-link.active{
     color: var(--primary-color);
     background-color: #f0f0f0;
     border-radius: 5px;
+    font-weight: 600;
 }
 
