constraint sign-up

--- a/FKitShop/src/page/SignInAndSignUp/index.scss
+++ b/FKitShop/src/page/SignInAndSignUp/index.scss
@@ -11,3 +11,6 @@
     opacity: 0.5; /* Make inactive tabs faded */
     transition: opacity 0.3s ease; /* Smooth transition when switching */
 }
+.form-message {
+    color: red;
+}
