--- a/FKitShop/src/assets/component/Header/Header.css
+++ b/FKitShop/src/assets/component/Header/Header.css
@@ -12,7 +12,7 @@ ul {
     list-style: none;
 }
 
-nav {
+.sticky-header{
     background-color: var(--primary-color);
     width: 100%;
     height: 110px;
