--- a/FKitShop/src/page/SignInAndSignUp/index.css
+++ b/FKitShop/src/page/SignInAndSignUp/index.css
@@ -1,13 +1,17 @@
 #mooc {
-    margin-top: 54px;
+    margin-top: 30px;
+    margin-bottom: -80px;
     /* Adjust this value as needed */
 }
 
+body {
+    background-color: var(--background-color);
+}
 /* Custom underline for active tab */
 .custom-active-tab {
-    border-bottom: 3px solid black !important;
+    border-bottom: 3px solid var(--primary-color) !important;
     /* Bold underline for active tab */
-    color: black !important;
+    color: var(--primary-color) !important;
     /* Ensure the active tab text is black */
     opacity: 1;
     /* Full opacity for active tab */
@@ -15,7 +19,7 @@
 
 /* Custom style for inactive tabs to make them faded */
 .custom-inactive-tab {
-    color: black !important;
+    color: var(--primary-color) !important;
     /* Ensure inactive tabs still have black text */
     opacity: 0.7;
     /* Make inactive tabs faded */
@@ -32,7 +36,7 @@
 }
 
 .form-control {
-    border: 1px solid #ccc;
+    border: 1px solid #F2F2F2;
     /* Viền ban đầu */
     padding: 10px;
     font-size: 16px;
@@ -44,7 +48,7 @@
 }
 
 .form-control:focus {
-    border-color: black;
+    border-color: var(--primary-color);
     /* Viền đen khi focus */
     outline: none;
     /* Loại bỏ viền mặc định màu xanh của trình duyệt */
@@ -53,7 +57,7 @@
 }
 
 button {
-    background-color: black;
+    background-color: gray;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -64,8 +68,12 @@ button {
 
 /* Khi người dùng hover */
 button:hover {
-    background-color: #333;
+    background-color: var(--primary-color);
     /* Thay đổi màu nền khi hover */
-    transform: scale(1.05);
     /* Phóng to nhẹ nút */
+}
+
+.card-shadow{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
 }
