fix layout sign-up

--- a/FKitShop/src/component/SignUp/index.scss
+++ b/FKitShop/src/component/SignUp/index.scss
@@ -11,3 +11,18 @@
     margin-right: 0.5px;
 }
 
+/* SignUp.css */
+#form-sign-up {
+    width: 100%;
+}
+
+@media (max-width: 768px) {
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .col-md-6 {
+        width: 100%;
+    }
+}
