--- a/FKitShop/src/index.css
+++ b/FKitShop/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  --background-color: #F2F2F2;
+  --background-color: #FFFF;
   --primary-color: #1E201E;
   --secondary-color: #B43F3F;
   --third-color: #B19615;
