--- a/FKitShop/src/component/UserProfileComponent/ProfileSidebar/index.module.css
+++ b/FKitShop/src/component/UserProfileComponent/ProfileSidebar/index.module.css
@@ -2,3 +2,7 @@ img {
     max-width: 100%;
     height: 100px;
 }
+button:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
