--- a/FKitShop/src/index.css
+++ b/FKitShop/src/index.css
@@ -9,3 +9,24 @@
   box-shadow: 0 4px 8px 2px rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
+
+.form-control {
+  border: 1px solid #F2F2F2;
+  /* Viền ban đầu */
+  padding: 10px;
+  font-size: 16px;
+  width: 100%;
+  box-sizing: border-box;
+  border-radius: 4px;
+  transition: border-color 0.3s ease-in-out;
+  /* Hiệu ứng mượt khi chuyển viền */
+}
+
+.form-control:focus {
+  border-color: var(--primary-color);
+  /* Viền đen khi focus */
+  outline: none;
+  /* Loại bỏ viền mặc định màu xanh của trình duyệt */
+  box-shadow: none;
+  /* Loại bỏ hiệu ứng đổ bóng mặc định nếu có */
+}
