--- a/FKitShop/src/component/UserProfileComponent/UpdateAccount/index.module.css
+++ b/FKitShop/src/component/UserProfileComponent/UpdateAccount/index.module.css
@@ -1,11 +1,15 @@
-.custom-btn {
-    padding: 5px 10px; /* Adjust padding for desired size */
-    font-size: 16px;    /* Adjust font size */
+/* .custom-btn {
+    padding: 5px 10px;
+    font-size: 16px;   
     width: 100px;
-  }
+  } */
+   
   .form-message {
     display: block;
     color: red; /* You can change the color */
     font-size: 12px; /* Adjust the font size as needed */
     margin-top: 4px; /* Adjust the spacing */
+}
+.wd{
+  margin-left: 100px;
 }
