--- a/FKitShop/src/component/Header/Header.css
+++ b/FKitShop/src/component/Header/Header.css
@@ -120,3 +120,25 @@ ul {
     font-weight: 600;
 }
 
+.product-tag-container {
+    list-style-type: none; 
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .product-tag-container a{
+    width: 100%;
+    text-decoration: none;
+    color: var(--primary-color);
+    transition: all 0.2s ease-in-out;
+    font-size: 0.9rem;
+  }
+  
+  .product-tag-container a:hover{
+    color: var(--third-color);
+    background-color: #f0f0f0;
+    font-weight: 800;
+  }
+  
