--- a/FKitShop/src/component/Header/Header.css
+++ b/FKitShop/src/component/Header/Header.css
@@ -22,12 +22,11 @@ ul {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 5px;
 }
 
 .upper-nav-logo {
     padding-top: 10px;
-    width: 150px;
+    height: 90px;
 }
 
 .upper-nav-search-form {
@@ -88,6 +87,7 @@ ul {
     display: flex;
     justify-content: center;
     background-color: var(--primary-color);
+    padding-bottom: 5px;
 }
 
 .lower-nav-menu li {
