--- a/FKitShop/src/component/HomePage/index.css
+++ b/FKitShop/src/component/HomePage/index.css
@@ -1,3 +1,13 @@
-.h1css{
-    margin-top: 150px;
+.wrapper{
+    margin-top: 100px;
+    height: 100vh;
+}
+
+.banner-container{
+    height: 650px;
+    object-fit: cover;
+}
+
+.banner-img{
+    height: 100%;
 }
