--- a/FKitShop/src/component/ProductCard/CardContent.css
+++ b/FKitShop/src/component/ProductCard/CardContent.css
@@ -24,10 +24,63 @@
 .product-card {
     margin-bottom: 20px;
 }
-.card-body .price {
-    color: red;
-    font-weight: bold;
+
+.card{
+    overflow: hidden;
+    min-height: 350px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
-.card-body .like {
-    color: red;
+
+.card img{
+    width: 100%;
+    height: 200px;
+    transition: transform 0.3s ease;
+    object-fit: cover;
 }
+
+.card img:hover{
+    transform: scale(1.1);
+}
+
+.card-title{
+    color: #000F8F;
+    font-size: 1rem
+}
+
+.card .price{
+    color: var(--secondary-color);
+    font-size: 1.2rem;
+    font-weight: 600;
+}
+
+.card-bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.view-detail-btn{
+    background-color: var(--background-color);
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    padding: 5px 10px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.view-detail-btn:hover{
+    background-color: var(--primary-color);
+    color: var(--background-color);
+}
+
+.like-btn{
+    display: flex;
+}
+
+.like-btn:hover{
+    background-color: var(--background-color);
+    color: var(--secondary-color);
+}
+
