--- a/FKitShop/src/component/HomePage/HomePage.css
+++ b/FKitShop/src/component/HomePage/HomePage.css
@@ -15,7 +15,7 @@
 .small-banner{
     width: 100%;
     overflow: hidden;
-    padding:  0 5px;
+    padding: 0 5px;
     border-radius: 10px;
 }
 
@@ -33,4 +33,50 @@
     opacity: 1;
 }
 
+.featured-content{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 20px;
+  }
+  
+  .featured-content h2 {
+    text-align: left;
+    font-weight: bold;
+    padding: 10px 20px;
+    color: var(--primary-color);
+    display: flex;
+  }
 
+  .featured-content h2 span{
+    background-color: var(--primary-color);
+    width: 5px;
+    margin-right: 5px;
+  }
+
+.featured-card{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    max-height: 250px;
+}
+
+.featured-card img {
+    width: 100%;
+    height: 190px;
+    object-fit: fill;
+  }
+
+.featured-card-title{
+    color: #000F8F;
+    font-size: 1rem;
+    margin-bottom: 10px;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
+}
+
+.featured-card-title:hover{
+    color: var(--third-color);
+    text-decoration: none;
+}
+
+  
+
+  
