--- a/FKitShop/src/component/UserProfile/ProfileSidebar/index.css
+++ b/FKitShop/src/component/UserProfile/ProfileSidebar/index.css
@@ -1,8 +1,8 @@
 img {
     max-width: 100%;
-    height: 100px;
+    height: auto;
 }
 button:focus {
     outline: none !important;
     box-shadow: none !important;
-}
+}   
