update header, detail

--- a/FKitShop/src/page/user/product/detail/ProductDetail.css
+++ b/FKitShop/src/page/user/product/detail/ProductDetail.css
@@ -34,3 +34,12 @@
     color: var(--background-color);
 
 }
+
+.product-detail-subimg{
+    opacity: 0.7;
+    transition: all 0.3s ease-in-out;
+}
+
+.product-detail-subimg:hover{
+    opacity: 1;
+}
