fix account-manager in dashboard

--- a/FKitShop/src/layouts/admin/menu/index.css
+++ b/FKitShop/src/layouts/admin/menu/index.css
@@ -30,7 +30,7 @@
   }
   
   .nav-link-item:hover {
-    background-color: #2e343a; /* Màu nền khi hover */
+    background-color: #9b9fa2; /* Màu nền khi hover */
   }
   
 
