--- a/FKitShop/src/page/user/order/OrderView.css
+++ b/FKitShop/src/page/user/order/OrderView.css
@@ -8,3 +8,17 @@
   padding: 20px;
   border-radius: 5px;
 }
+
+.order-summary a{
+  text-decoration: none;
+  color: #a49898;
+  display: flex;
+  margin-top: 10px;
+  font-size: 1rem;
+  opacity: 0.5;
+  transition: all 0.3s ease-in-out;
+}
+
+.order-summary a:hover{
+  opacity: 1;
+}
