--- a/FKitShop/src/page/user/order/OrderSuccess.css
+++ b/FKitShop/src/page/user/order/OrderSuccess.css
@@ -51,3 +51,18 @@
 .home-button:hover {
     background-color: #45a049;
 }
+
+.viewPurchase-button {
+    background-color: #efe66b;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.viewPurchase-button:hover {
+    background-color: #e3d61c;
+}
