update product detail in homepage & product detail page

--- a/FKitShop/src/page/user/product/detail/ProductDetail.css
+++ b/FKitShop/src/page/user/product/detail/ProductDetail.css
@@ -1,4 +1,4 @@
-.atc-btn{
+.detail-atc-btn{
     background-color: var(--primary-color);
     color: var(--background-color);
     font-weight: 500;
@@ -7,7 +7,21 @@
     opacity: 0.8;
 }
 
-.atc-btn:hover{
+.detail-atc-btn:hover{
+    opacity: 1;
+    color: var(--background-color);
+}
+
+.out-stock-btn{
+    background-color: var(--secondary-color);
+    color: var(--background-color);
+    font-weight: 500;
+    border-radius: 10px;
+    opacity: 0.8;
+    transition: all 0.2s ease-in-out;
+}
+
+.out-stock-btn:hover{
     opacity: 1;
     color: var(--background-color);
 }
