--- a/FKitShop/src/components/AddToCartPopup.css
+++ b/FKitShop/src/components/AddToCartPopup.css
@@ -41,7 +41,7 @@
 }
 
 
-.add-to-cart-btn, .close-btn {
+.add-to-cart-btn, .close-btn, .out-of-stock-btn {
     margin: 5px;
     padding: 10px 15px;
     border: none;
@@ -59,6 +59,19 @@
 .add-to-cart-btn:hover {
     background-color: var(--primary-color);
     color: var(--background-color);
+}
+
+.out-of-stock-btn {
+    background-color: var(--secondary-color);
+    color: var(--background-color);
+    border: 1px solid var(--secondary-color);
+    transition: all 0.2s ease-in-out;
+    opacity: 0.7;
+}
+
+.out-of-stock-btn:hover {
+    opacity: 1;
+    background-color: var(--secondary-color);
 }
 
 .close-btn {
