--- a/FKitShop/src/page/user/home/HomePage.css
+++ b/FKitShop/src/page/user/home/HomePage.css
@@ -76,7 +76,7 @@
     font-size: 1rem;
     margin-bottom: 10px;
     transition: all 0.2s ease-in-out;
-    cursor: pointer;
+    cursor: none;
 }
 
 .featured-card-title:hover{
