--- a/FKitShop/src/component/UserProfile/MyLab/index.css
+++ b/FKitShop/src/component/UserProfile/MyLab/index.css
@@ -2,9 +2,9 @@
     margin-top: 20px;
 }
 
-table{
+/* table{
     width: 100%;
-}
+} */
 
 .lab-thead{
     background-color: var(--primary-color);
