--- a/FKitShop/src/component/Loading/Loading.css
+++ b/FKitShop/src/component/Loading/Loading.css
@@ -4,21 +4,20 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5); /* Giảm độ mờ của nền */
-  backdrop-filter: blur(2px); /* Giảm mức độ blur */
+  background: rgba(255, 255, 255, 0.5); 
+  backdrop-filter: blur(2px); 
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; /* Ensure it overlays everything */
+  z-index: 9999; 
 }
 
 .hourglass {
-  /* Your hourglass CSS goes here */
+
   width: 3em;
   height: 5em;
   background: #255ff4;
-  animation: flip 4s infinite;
-  /* Example styling for hourglass animation */
+
 }
 
 @keyframes flip {
@@ -26,9 +25,6 @@
   100% { transform: rotate(180deg); }
 }
 
-/* Optional: You can add other loading animations or styles */
-
-/* New styles for the dots animation */
 .loading-dots {
   display: flex;
 }
