fix view product-manager

--- a/FKitShop/src/page/admin/product-manager/index.css
+++ b/FKitShop/src/page/admin/product-manager/index.css
@@ -5,4 +5,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
-  
+
+.disable-form-layout {
+  background-color: white !important;
+  color: black !important;
+}
