--- a/FKitShop/src/page/user/blog/BlogPage.css
+++ b/FKitShop/src/page/user/blog/BlogPage.css
@@ -20,13 +20,13 @@
     border-radius: 10px;
 }
 
-h3 {
+.blog-card h3 {
     color: var(--primary-color);
     font-size: 1rem;
     margin: 10px 0;
 }
 
-a {
+.blog-card a {
     text-decoration: none;
     color: var(--secondary-color);
     padding: 10px;
@@ -34,7 +34,7 @@ a {
     transition: all 0.3s ease-in-out;
 }
 
-a:hover {
+.blog-card a:hover {
     color: var(--background-color);
     background-color: var(--secondary-color);
     text-decoration: none;
