--- a/FKitShop/src/component/UserProfile/UpdateAccount/index.module.css
+++ b/FKitShop/src/component/UserProfile/UpdateAccount/index.module.css
@@ -13,3 +13,16 @@
 .wd{
   margin-left: 100px;
 }
+
+    /* Điện thoại nhỏ */
+@media (max-width: 576px) {
+  .wd {
+    margin-left: 0;
+  }
+}
+    
+@media (min-width: 576px) and (max-width: 768px) {
+  .wd {
+    margin-left: 0;
+  }
+}
