--- a/FKitShop/src/component/UserProfile/ChangePassword/index.module.css
+++ b/FKitShop/src/component/UserProfile/ChangePassword/index.module.css
@@ -7,3 +7,15 @@
 .btnCustom{
     margin-left: 200px;
 }
+
+@media (max-width: 576px) {
+    .wd {
+      margin-left: 0;
+    }
+  }
+      
+  @media (min-width: 576px) and (max-width: 768px) {
+    .wd {
+      margin-left: 0;
+    }
+  }
